--- a/package.xml
+++ b/package.xml
@@ -8,7 +8,6 @@
 
   <license>WTFPL</license>
 
-
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>libpcl-all-dev</build_depend>
@@ -16,6 +15,7 @@
   <exec_depend>libpcl-all</exec_depend>
 
   <depend>nav_core</depend>
+  <depend>geometry_msgs</depend>
   <depend>roscpp</depend>
 
   <doc_depend>doxygen</doc_depend>
