added enabled param (also dynam configurable)
working on fixing straf to goal behavior
fixed a real stupid typo that explain why my rviz mrakers were shit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,9 @@ project(straf_recovery)
 ## is used, also find other catkin packages
 find_package(PCL REQUIRED)
 find_package(catkin REQUIRED COMPONENTS
+  angles
   base_local_planner
+  dynamic_reconfigure
   geometry_msgs
   nav_core
   std_msgs
@@ -23,7 +25,9 @@ catkin_package(
   INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
   CATKIN_DEPENDS
+    angles
     base_local_planner
+    dynamic_reconfigure
     geometry_msgs
     nav_core
     std_msgs
