--- a/cfg/StrafRecovery.cfg
+++ b/cfg/StrafRecovery.cfg
@@ -8,6 +8,7 @@ roslib.load_manifest(PACKAGE)
 gen = ParameterGenerator()
 
 #Name, Type, Reconfiguration level, Description, Default, Min, Max
+gen.add("enabled", bool_t, 0, "enabled", True)
 gen.add("go_to_goal_distance_threshold", double_t, 0, "the distance at which the robot will simply straf to the goal", 1.0, 0, 10)
 gen.add("minimum_translate_distance", double_t, 0, "minimum distance we must translate", 0.5, 0, 10)
 gen.add("maximum_translate_distance", double_t, 0, "maximum distance we can translate", 5.0, 0, 10)
